--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was create by Prashant. It uses data from mapbox.com adn darksky.net</p>
             <img class = 'portrait' src="/images/me.jpg" alt="image">
         </div>
         {{>footer}}
